# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.6
packages         = find:

[options.package_data]
* = *.c, *.h

[options.exclude_package_data]
* = *.py, *.nim, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[options.packages.find]
where   = .
include = *.c, *.h
exclude = *.py, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[metadata]
name             = plz
provides         = plz
description      = PIP Alternative
url              = https://github.com/juancarlospaco
author           = Juan_Carlos.nim
author_email     = juancarlospaco@gmail.com
maintainer       = Juan_Carlos.nim
maintainer_email = juancarlospaco@gmail.com
keywords         = python3, python4, cpython, speed, cython, c, performance, compiled, native, fast, nim, pip, pip-tools, easy_install, poetry
license          = MIT
platforms        = Linux, Darwin, Windows
license_file     = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
version =